# Eiwic

./: AUTHORS  Makefile.am  Makefile.in  README  TODO  configure  configure.in  connections.c  connections.h  debug.conf  dlist.c  dlist.h  eiwic.c  eiwic.h  numerics.h  plugins.c  plugins.h  rssfeed.conf  sample.conf  servers.c  servers.h  settings.c  settings.h  users.c  users.h
doc/: doc.html
modules/: Makefile.am  Makefile.in  admin.c  adventure.c  bc.c  conv.c  crash.c  ctcp.c  decide.c  dict.c  getnick.c  google.c  info.c  lol.c  modadmin.c  nickserv.c  rot13.c  rssfeed.buildflags  rssfeed.c  stats.c  stream.c  styorg_addpic.c  template.c  tictactoe.c
